@@ -37,6 +37,7 @@ FCFLAGS=$glimmer_FCFLAGS
 FFLAGS=$glimmer_FFLAGS
 AC_LANG(Fortran)
 AC_FC_SRCEXT(f90)
+AX_F90_MODULE_FLAG
 
 # checking for f2003 command line parser
 AC_MSG_CHECKING([for f2003 command line parser])
@@ -50,13 +51,11 @@ AC_LINK_IFELSE([AC_LANG_PROGRAM([],
 AC_MSG_CHECKING([which fortran compiler])
 f95v="no idea"
 f95string=`$FC -V 2>&1`
-f95_moduleinclude="-I"
 f95_preprocessor="-fpp"
 # testing for SUN f95 compiler
 fs=`echo $f95string |$EGREP "Sun|Forte"`
 if test "$fs" != "" ; then
   f95v="SUN f95"
-  f95_moduleinclude="-M"
   CFORTRAN_CFLAGS=-DsunFortran
 fi
 # testing for NAG f95 compiler
@@ -137,28 +136,7 @@ AM_CONDITIONAL(EXT_GOMP,test "$ac_cv_havegomp" == 1)
 
 
 # checking for netCDF
-AC_ARG_WITH(netcdf,AS_HELP_STRING([--with-netcdf],[location where netCDF is installed]),[ac_cv_netcdf_prefix=$withval])
-if test "$ac_cv_netcdf_prefix" != ""; then
-  AC_MSG_RESULT(netCDF location: $ac_cv_netcdf_prefix)
-  NETCDF_FCFLAGS="$f95_moduleinclude$ac_cv_netcdf_prefix/include"
-  FCFLAGS="$FCFLAGS $NETCDF_FCFLAGS"
-  LDFLAGS="$LDFLAGS -L$ac_cv_netcdf_prefix/lib"
-fi
-# check for netCDF C library
-save_LIBS=$LIBS
-LIBS=""
-AC_LANG_PUSH(C)
-AC_CHECK_LIB(netcdf,nc_inq_libvers,[],[AC_MSG_ERROR(cannot find netCDF library)])
-AC_LANG_POP(C)
-# checking for the fortran netCDF library
-AC_SEARCH_LIBS(NF_INQ_LIBVERS,netcdff,[],[AC_MSG_ERROR(cannot find netCDF fortran library)])
-# check for f90 interface
-AC_MSG_CHECKING([for f90 netCDF interface])
-AC_COMPILE_IFELSE([AC_LANG_PROGRAM([],[use netcdf])],AC_MSG_RESULT([yes]),AC_MSG_FAILURE([no]))
-NETCDF_LIBS=$LIBS
-LIBS=$save_LIBS
-AC_SUBST(NETCDF_LIBS)
-AC_SUBST(NETCDF_FCFLAGS)
+ACX_NETCDF([],[AC_MSG_ERROR(cannot find netCDF fortran library)])
 
 #Checking for alternate linear solvers
 AC_ARG_WITH(umfpack,AS_HELP_STRING([--with-umfpack],[Optional location of umfpack linear solver]),[ac_cv_umfpack_prefix=$withval])
@@ -255,7 +233,7 @@ if test "$ac_cv_enmabal_prefix" != ""; then
   LIBS="$LIBS -lsmb"
   AC_MSG_RESULT(enmabal location: $ac_cv_enmabal_prefix)
   AC_DEFINE(USE_ENMABAL,1,[Define to 1 if you want to use ENMABAL])
-  FCFLAGS="$FCFLAGS $f95_moduleinclude$ac_cv_enmabal_prefix"
+  FCFLAGS="$FCFLAGS $ax_cv_f90_modflag$ac_cv_enmabal_prefix"
   LDFLAGS="$LDFLAGS -L$ac_cv_enmabal_prefix"
   AC_MSG_CHECKING([for f90 ENMABAL interface])
   AC_COMPILE_IFELSE([AC_LANG_PROGRAM([],[use smb_mecons])],AC_MSG_RESULT([yes]),AC_MSG_FAILURE([no]))
