@@ -73,7 +73,7 @@ if test "$echo_exec_prefix" = "yes"; then
 fi
 
 if test "$echo_fcflags" = "yes"; then
-      echo -I@includedir@ @FCFLAGS@ @NETCDF_FCFLAGS@ 
+      echo -I@includedir@ @FCFLAGS@ @NETCDF_CPPFLAGS@
 fi
 
 if test "$echo_libs" = "yes"; then
